--- a/src/scss/in-works.scss
+++ b/src/scss/in-works.scss
@@ -259,6 +259,22 @@
                     text-align: center;
                 }
 
+                ul {
+                    
+                    list-style: none;
+                    margin-bottom: 16px;
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+
+                    li {
+                        font-family: "Ubuntu";
+                        font-weight: lighter;
+                        font-size: 1.1em;   
+                        text-align: center;   
+                    }
+                }
+
                 .button_works {
                     align-self: center;
                     display: initial;
@@ -576,15 +592,15 @@
                         } 
 
                         ul {
+                            display: block;
                             list-style: inside;
                             margin-left: 16px;
-                            margin-bottom: 16px;
-
+        
                             li {
                                 font-family: "Ubuntu";
                                 font-weight: lighter;
-                                font-size: 1.1em;
-                                
+                                font-size: 1.1em;  
+                                text-align: start;    
                             }
                         }
 
