--- a/src/scss/visual.scss
+++ b/src/scss/visual.scss
@@ -62,14 +62,14 @@
         background-color: whitesmoke;
         border: 5px;
         border-style: solid;
-        border-color: rgb(117, 148, 197);
+        border-color: white;
 
         img {
             width: 50%;
         }
 
         .button-mobile {
-            background-color: rgb(117, 148, 197);
+            background-color: white;
         }
     }
 }
