--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -8,6 +8,7 @@
 @import "font";
 @import "home";
 @import "works";
+@import "js_projects";
 @import "skills";
 @import "about";
 @import "in-works";
