--- a/src/scss/title.scss
+++ b/src/scss/title.scss
@@ -48,6 +48,34 @@
     }
 }
 
+.works:nth-of-type(5) {
+
+    .title {
+
+        .number {
+            font-family: "Charm";
+            color: white;
+        }
+
+        p {
+            color: #bbbbbb;
+        }
+
+        .button {
+            border: 0.1em solid white;
+            color: white;
+            transition: background-color 0.3s ease-in;
+        }
+
+        .button:hover {
+            background-color: white;
+            color: black;
+        }
+        
+    }
+}
+
+
 .works:nth-of-type(4) {
 
     .title {
