--- a/src/scss/article_js_projects.scss
+++ b/src/scss/article_js_projects.scss
@@ -25,7 +25,7 @@
             align-items: center;
             padding: 1rem;
             margin: 0 auto;
-            font-family: #{font-sans};
+            font-family: #{$font-sans};
         }
 
         .card {
@@ -58,7 +58,7 @@
             height: 110%;
             background-size: cover;
             background-position: 0 0;
-            transition: transform 2s #{e};
+            transition: transform 2s #{$e};
             pointer-events: none;
         }
 
@@ -73,7 +73,7 @@
             pointer-events: none;
             background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.099) 46.6%, rgba(0, 0, 0, 0.1) 53.1%, rgba(0, 0, 0, 0.115) 58.9%, rgba(0, 0, 0, 0.129) 64.3%, rgba(0, 0, 0, 0.168) 69.3%, rgba(0, 0, 0, 0.2) 74.1%, rgba(0, 0, 0, 0.237) 78.8%, rgba(0, 0, 0, 0.268) 83.6%, rgba(0, 0, 0, 0.321) 88.7%, rgba(0, 0, 0, 0.362) 94.1%, rgba(0, 0, 0, 0.39) 100%);
             transform: translateY(-50%);
-            transition: transform 2s #{e};
+            transition: transform 2s #{$e};
         }
 
         .card:nth-child(1):before {
@@ -109,7 +109,7 @@
             align-items: center;
             width: 100%;
             padding: 1rem;
-            transition: transform #{d} #{e};
+            transition: transform #{$d} #{$e};
             z-index: 1;
         }
 
@@ -124,7 +124,7 @@
         }
 
         .description {
-            font-family: #{font-serif};
+            font-family: #{$font-serif};
             font-size: 0.8rem;
             line-height: 1.35;
             display: block;
@@ -150,7 +150,7 @@
         .btn:hover {
             background-color: rgb(117, 148, 197);
             color: #fff;
-            transition: transform #{d} #{e}, opacity #{d} #{e};
+            transition: transform #{$d} #{$e}, opacity #{$d} #{$e};
         }
 
         .btn:focus {
@@ -165,7 +165,7 @@
         .content>* {
             opacity: 0;
             transform: translateY(1rem);
-            transition: transform #{d} #{e}, opacity #{d} #{e};
+            transition: transform #{$d} #{$e}, opacity #{$d} #{$e};
         }
 
         .card:hover {
@@ -187,6 +187,6 @@
         .card:hover .content>* {
             opacity: 1;
             transform: translateY(0);
-            transition-delay: calc(#{d} / 8);
+            transition-delay: calc(#{$d} / 8);
         }
 }
