--- a/src/scss/in-works.scss
+++ b/src/scss/in-works.scss
@@ -176,13 +176,13 @@
         min-height: calc(100vh - 30px);
             
 
-        .iphone_pastry, .iphone_pastry2, .desktop_roleplay, .desktop_feed, .iphone_hajime, .iphone_hajime2, .iphone_portfolio, .iphone_portfolio2 {
+        .iphone_pastry, .iphone_pastry2, .desktop_roleplay, .desktop_maison-vapeur, .desktop_feed, .iphone_hajime, .iphone_hajime2, .iphone_portfolio, .iphone_portfolio2 {
             display: none;  
         }
 
        
 
-        .right_pastry, .right_roleplay, .right_feed, .right_hajime, .right_portfolio {
+        .right_pastry, .right_roleplay, .right_feed, .right_hajime, .right_portfolio, .right_maison-vapeur {
 
             display: flex;
             align-items: center;
@@ -194,6 +194,15 @@
             .titre {   
                 padding-top : 40px;
                 margin: 0;
+
+                .h1-maison-vapeur {
+                    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+                    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+                    sans-serif;
+                    font-size: 2.5em;
+                    margin-top: 16px;
+                    text-align: center;
+                }
     
                 .h1-pastry {
                     font-family: "Cormorant";
@@ -326,6 +335,13 @@
             }
         }
 
+        .right_maison-vapeur {
+
+            .desktop_maison-vapeur2 {
+                width: 450px;
+            }
+        }
+
         .right_feed {
 
             .desktop_feed2 {
@@ -373,7 +389,7 @@
             position: absolute;
             background-color: rgb(245, 250, 255);
             bottom: 60px;
-            right: -26px;
+            right: -8px;
             left: unset;
             padding-top: 5px;
 
@@ -429,6 +445,12 @@
             .right_roleplay {
                 .desktop_roleplay2 {
 
+                    width: 600px;
+                }
+            }
+
+            .right_maison-vapeur {
+                .desktop_maison-vapeur2 {
                     width: 600px;
                 }
             }
@@ -498,6 +520,7 @@
 
             .sidebar {
                 display: flex;
+                
             }
         }
     }
@@ -520,8 +543,11 @@
             grid-template-areas: 
                 "div_l div_r";
     
-            
-            .right_pastry, .right_roleplay, .right_feed, .right_hajime, .right_portfolio {
+            .sidebar {
+                right: -26px;
+                    
+            }
+            .right_pastry, .right_roleplay, .right_feed, .right_hajime, .right_portfolio, .right_maison-vapeur {
                 display: grid;
                 grid-template-rows: auto auto auto;
                 grid-template-columns: none;
@@ -530,7 +556,7 @@
                     "texte"
                     "bouton";
 
-                .iphone_pastry3, .desktop_roleplay2, .desktop_feed2, .iphone_hajime3, .iphone_portfolio3 {
+                .iphone_pastry3, .desktop_roleplay2, .desktop_maison-vapeur2, .desktop_feed2, .iphone_hajime3, .iphone_portfolio3 {
                     display: none;
                 }
 
@@ -545,6 +571,12 @@
                     opacity: 0;
                     animation: apparition_txt_works 1s 0.5s forwards;
                     margin-bottom: 5vh;
+
+                    .h1-maison-vapeur {
+                        font-size: 3em;
+                        margin-top: 0px;
+                        text-align: initial;
+                    }
 
                     
                     .h1-pastry {
@@ -722,9 +754,9 @@
                 }
             }
 
-            .img_roleplay {
+            .img_roleplay, .img_maison-vapeur {
 
-                .desktop_roleplay {
+                .desktop_roleplay, .desktop_maison-vapeur {
                     display: initial;
                     position: fixed;
                     top: 60px;
