--- a/src/scss/title.scss
+++ b/src/scss/title.scss
@@ -48,7 +48,7 @@
     }
 }
 
-.works:nth-of-type(5) {
+.works:nth-of-type(6) {
 
     .title {
 
@@ -76,7 +76,7 @@
 }
 
 
-.works:nth-of-type(4) {
+.works:nth-of-type(5) {
 
     .title {
 
@@ -102,7 +102,7 @@
 }
 
 
-.works:nth-of-type(3) {
+.works:nth-of-type(4) {
 
     .title {
 
@@ -130,7 +130,7 @@
 }
 
 
-.works:nth-of-type(2) {
+.works:nth-of-type(3) {
 
     .title {
 
@@ -156,6 +156,38 @@
         
     }
 }
+
+.works:nth-of-type(2) {
+
+    .title {
+
+        h2 {
+            font-size: 2.6em;
+        }
+
+        .number {
+            font-family: "Charm";
+            color: white;
+        }
+
+        p {
+            color: #bbbbbb;
+        }
+
+        .button {
+            border: 0.1em solid white;
+            color: white;
+            transition: background-color 0.3s ease-in;
+        }
+
+        .button:hover {
+            background-color: white;
+            color: black;
+        }
+        
+    }
+}
+
 
 
 
