add feed project

--- a/src/scss/title.scss
+++ b/src/scss/title.scss
@@ -48,6 +48,31 @@
     }
 }
 
+.works:nth-of-type(7) {
+
+    .title {
+
+        .number {
+            font-family: "Charm";
+            color: rgb(117, 148, 197);
+        }
+
+        p {
+            color: #959595;
+        }
+
+        .button {
+            border: 0.1em solid rgb(117, 148, 197);
+            transition: background-color 0.3s ease-in;
+        }
+
+        .button:hover {
+            background-color: rgb(117, 148, 197);
+            color: white;
+        }
+    }
+}
+
 .works:nth-of-type(6) {
 
     .title {
@@ -128,6 +153,8 @@
         
     }
 }
+
+
 
 
 .works:nth-of-type(3) {
