--- a/src/scss/footer_home.scss
+++ b/src/scss/footer_home.scss
@@ -54,6 +54,7 @@ footer {
             text-align: center;
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
             font-size: 0.9em;
+            font-weight: bolder;
             line-height: 1.3em;
             
         
