add borne project

--- a/src/scss/article_js_projects.scss
+++ b/src/scss/article_js_projects.scss
@@ -124,7 +124,7 @@
         }
 
         .description {
-            font-family: #{$font-serif};
+            //font-family: #{$font-serif};
             font-size: 0.8rem;
             line-height: 1.35;
             display: block;
