--- a/src/scss/visual.scss
+++ b/src/scss/visual.scss
@@ -37,7 +37,7 @@
     }
 }
 
-.works:nth-of-type(7) {
+.works:nth-of-type(8) {
 
     .visual {
         background-image: url("fond.jpg");
@@ -51,8 +51,7 @@
     }
 }
 
-
-.works:nth-of-type(6) {
+.works:nth-of-type(7) {
 
     .visual {
         background-image: url("macarons.jpg");
@@ -62,6 +61,21 @@
 
         .button-mobile {
             background-color: rgb(117, 148, 197);
+        }
+    }
+}
+
+
+.works:nth-of-type(6) {
+
+    .visual {
+        background-image: url("burger.png");
+        border: 5px;
+        border-style: solid;
+        border-color: white;
+
+        .button-mobile {
+            background-color: white;
         }
     }
 }
